# ai-clip

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README-en.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: channels.example.yaml  default.yaml  radar-feedback.example.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: change-boundaries.md  pair-review.md  radar.md  reliability.md  research.md  workflows.md
products/: mahjong.example.yaml
scripts/: smoke.ps1
src/ai_clip/: __init__.py  artifact_catalog.py  cli.py  doctor.py  pipeline.py  project_artifacts.py  registry.py  research_engine.py  tools.py  workflows.py
src/ai_clip/analyze/: __init__.py  analyzer.py  prompts.py
src/ai_clip/core/: artifact_status.py  artifacts.py  async_jobs.py  billing.py  config.py  device.py  doctor.py  ffmpeg.py  fonts.py  llm.py  models.py  paths.py  retry.py  run_lock.py  run_status.py  run_view.py  stages.py
src/ai_clip/discover/: __init__.py  base.py  bilibili.py  discover.py  ranking.py  social.py  youtube.py
src/ai_clip/download/: __init__.py  (+1 more)
tests/: test_assemble.py  test_backends.py  test_billing.py  test_captions.py  test_cli.py  test_core.py  test_discover.py  test_download_llm.py  test_export.py  test_intent.py  test_pair.py  test_produce.py  test_radar.py  test_registry.py  test_research.py  test_resume.py  test_retry.py  test_review.py  test_shared_engines.py  test_source_draft.py  test_source_research.py  test_subtitles.py  test_tools.py  test_tts.py  test_workflows.py
workflows/: txt2img.example.json
(+71 files in other folders)
