[project]
name = "ai-clip"
version = "0.1.0"
description = "Orchestrator that chains download -> extract -> analyze -> produce for short-video creation and remixing"
readme = "README.md"
# Pinned to a modern-but-mature floor: 3.12 is the current stable series (3.13 is
# still stabilizing its ecosystem). Matches the 3.12.9 interpreter on this machine.
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.9,<3",
    "pyyaml>=6.0",
    "typer>=0.15,<0.18",
    "rich>=13.9",
    "httpx>=0.28,<0.29",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
# Heavy / environment-specific deps are opt-in so the core stays importable and testable.
download = ["yt-dlp>=2025.1"]
extract = ["faster-whisper>=1.1"]
llm = ["openai>=1.55,<2"]
dev = ["pytest>=8.3", "pytest-cov>=6.0", "ruff>=0.8"]

[project.scripts]
ai-clip = "ai_clip.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_clip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
